Sidebar expand button no longer covers the stats

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -943,3 +943,9 @@ dialog.open {
         }
     }
 }
+
+@media (max-width: 500px) {
+    main div.game header {
+        padding-right: 52px;
+    }
+}
